<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AlarmDetailsFragment">

    <TextView
        android:id="@+id/tv_medicine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_medicine_name"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="55dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/et_medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/medicine_name"
        app:layout_constraintStart_toStartOf="@+id/tv_medicine_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_medicine_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_medicine_name" />

    <EditText
        android:id="@+id/et_medicine_name_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/medicine_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_medicine_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_medicine_name"
        app:layout_constraintTop_toBottomOf="@+id/et_medicine_name" />

    <EditText
        android:id="@+id/et_medicine_name_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:hint="@string/medicine_name"
        app:layout_constraintStart_toStartOf="@+id/tv_medicine_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_medicine_name"
        app:layout_constraintTop_toBottomOf="@+id/et_medicine_name_2" />

    <EditText
        android:id="@+id/et_medicine_name_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/medicine_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_medicine_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_medicine_name"
        app:layout_constraintTop_toBottomOf="@+id/et_medicine_name_3" />

    <TextView
        android:id="@+id/tv_add_another_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_another_medicine"
        android:textColor="#0000ff"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_medicine_name_4" />

    <TextView
        android:id="@+id/tv_set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="55dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_medicine_name_4" />

    <EditText
        android:id="@+id/et_set_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_time"
        android:focusableInTouchMode="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/tv_set_time"
        app:layout_constraintEnd_toEndOf="@id/tv_set_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_time" />

    <Button
        android:id="@+id/btn_set_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remind_me"
        app:layout_constraintTop_toBottomOf="@id/et_set_time"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>